混合检索、排序与证据生成